// ProtoGeneric
syntax = "proto2";
package pl.inder00.opensource.sectors.protocol.protobuf;
import "ProtoGeneric.proto";
option java_outer_classname = "ProtobufChangeSectorData";

// player uuids
message ChangeSectorPacket {
  required string playerName = 1;
  required ProtoSector sector = 2;
}